color controls are fine now

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "pnpm with-env vinxi dev",
+    "dev": "pnpm with-env vinxi dev -- --host",
     "build": "pnpm with-env vinxi build",
     "start": "pnpm with-env vinxi start",
     "lint": "eslint .",
