--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@rocicorp/zero": "^0.9.2024121900",
     "@tanstack/react-form": "^0.39.0",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "^1.85.0",
@@ -51,6 +52,7 @@
     "drizzle-orm": "^0.36.4",
     "emoji-regex": "^10.4.0",
     "framer-motion": "^11.12.0",
+    "install": "^0.13.0",
     "lucia": "^3.2.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.3",
@@ -67,6 +69,7 @@
     "uuid": "catalog:",
     "vaul": "^1.1.1",
     "vinxi": "0.4.3",
+    "ws": "^8.18.0",
     "zod": "catalog:"
   },
   "devDependencies": {
@@ -80,6 +83,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
