--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "turbo run studio -F @tyl/db",
     "db:generate": "turbo run generate -F @tyl/db",
     "dev": "turbo watch dev",
+    "dev:zero-cache": "zero-cache-dev -p apps/server/app/schema.ts",
     "format": "turbo run format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo run lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
