some more zero refactoring and changes all over the place

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,9 +8,9 @@
       "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
     },
-    "./client": {
-      "types": "./dist/client.d.ts",
-      "default": "./src/client.ts"
+    "./jsonValidators": {
+      "types": "./dist/jsonValidators.d.ts",
+      "default": "./src/jsonValidators.ts"
     },
     "./schema": {
       "types": "./dist/schema.d.ts",
