--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -9,7 +9,8 @@
     "./colorPresets": "./src/colorPresets.ts",
     "./colorTools": "./src/colorTools.ts",
     "./timezone": "./src/timezone.ts",
-    "./trackables": "./src/trackables.ts"
+    "./trackables": "./src/trackables.ts",
+    "./types": "./src/types.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -20,7 +21,6 @@
   },
   "dependencies": {
     "@date-fns/tz": "catalog:",
-    "@tyl/validators": "workspace:*",
     "chroma-js": "^3.1.2",
     "date-fns": "catalog:",
     "lodash-es": "^4.17.21"
@@ -30,6 +30,7 @@
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
+    "@tyl/db": "workspace:*",
     "@types/chroma-js": "^2.4.4",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "catalog:react18",
